<resources>
    <string name="app_name">SelApp</string>
    <string name="todo">TODO</string>
    <string name="enter_the_fields_to_create_an_exchange">Enter the fields to create an exchange.</string>
    <string name="toolbar_txt_counter_hours">Hours : %1$d </string>
    <string name="edit_the_fields">Edit the fields.</string>
    <string name="old_password">Old password</string>
    <string name="username">Username</string>
    <string name="new_password"> New Password</string>
    <string name="email">Email</string>
    <string name="update_profile">update profile</string>
    <string name="image_profile">Image profile.</string>
    <string name="choose_a_picture">Choose a picture .</string>
    <string name="update_image">update image</string>
    <string name="end_date">End Date</string>
    <string name="start_date">Start Date</string>
    <string name="search">Search</string>
    <string name="no_internet_connexion_available">No internet connexion available</string>
    <string name="retry">Retry</string>
    <string name="enroll">Enroll</string>
    <string name="withdraw">Withdraw</string>
    <string name="create_a_new_category"> New Category</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="log_out">Log Out</string>
    <string name="actions">Actions</string>
    <string name="enter_the_category_name">Enter the category name</string>
    <string name="add_category">add category</string>
    <string name="category">Category</string>
    <string name="my_category">My Category</string>
    <string name="my_categories">My Categories</string>
    <string name="send">Send</string>
    <string name="message">message</string>

</resources>
