<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorBackgroundElement"
    android:orientation="vertical"
    android:padding="25dp">

    <LinearLayout
        android:id="@+id/container_btn_sorting"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/fragment_sorting_btn_start_date"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="5dp"
            android:layout_weight="1"
            android:background="@drawable/shadow"
            android:padding="5dp"
            android:text="@string/start_date"
            android:textColor="@color/colorText" />

        <Button
            android:id="@+id/fragment_sorting_btn_end_date"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="@drawable/shadow"
            android:padding="5dp"
            android:text="@string/end_date"
            android:textColor="@color/colorText" />


    </LinearLayout>


    <androidx.appcompat.widget.AppCompatSpinner
        android:id="@+id/fragment_sorting_spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:popupBackground="@color/colorBackgroundExchange"
        android:spinnerMode="dropdown"
        android:layout_gravity="center" />

    <Button
        android:id="@+id/fragment_sorting_btn_search"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/shadow"
        android:padding="5dp"
        android:text="@string/search"
        android:textColor="@color/colorText" />

</LinearLayout>