<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/custom_background"
    android:padding="10dp">

    <LinearLayout
        android:id="@+id/header_edit_profile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="21dp">

        <include
            android:id="@+id/header_view"
            layout="@layout/header_view" />

        <androidx.cardview.widget.CardView
            android:id="@+id/card_view"
            android:layout_width="176dp"
            android:layout_height="176dp"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:elevation="12dp"
            app:cardCornerRadius="90dp">

            <ImageView
                android:id="@+id/image_view_profile"
                android:layout_width="match_parent"
                android:layout_height="176dp"
                android:scaleType="centerCrop" />

            <TextView
                android:id="@+id/foto_hint"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="Choose a picture ."
                android:textColor="@color/colorBackgroundExchange" />

        </androidx.cardview.widget.CardView>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:text="@string/edit_the_fields"
            android:textColor="@color/colorExchangeItem"
            android:textSize="20sp" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/fragment_edit_profile_input_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="flagNoExtractUi"
            app:errorEnabled="true"
            app:errorTextAppearance="@color/colorExchangeItem"
            app:passwordToggleEnabled="true"
            app:theme="@style/TextInputLayoutAppearance">

            <EditText
                android:id="@+id/fragment_edit_profile_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:hint="@string/username"
                android:imeOptions="flagNoExtractUi"
                android:maxLength="30"
                android:textColor="@color/colorExchangeItem"
                app:theme="@style/MyEditText" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/fragment_edit_profile_input_old_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="flagNoExtractUi"
            app:errorEnabled="true"
            app:errorTextAppearance="@color/colorExchangeItem"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/colorExchangeItem"
            app:theme="@style/TextInputLayoutAppearance">

            <EditText
                android:id="@+id/fragment_edit_profile_old_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/old_password"
                android:imeOptions="flagNoExtractUi"
                android:inputType="textPassword"
                android:maxLength="30"
                android:textColor="@color/colorExchangeItem"
                app:theme="@style/MyEditText" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/fragment_edit_profile_input_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="flagNoExtractUi"
            app:errorEnabled="true"
            app:errorTextAppearance="@color/colorExchangeItem"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/colorExchangeItem"
            app:theme="@style/TextInputLayoutAppearance">

            <EditText
                android:id="@+id/fragment_edit_profile_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/new_password"
                android:imeOptions="flagNoExtractUi"
                android:inputType="textPassword"
                android:maxLength="30"
                android:textColor="@color/colorExchangeItem"
                app:theme="@style/MyEditText" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/fragment_edit_profile_input_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="flagNoExtractUi"
            android:textColor="@color/colorExchangeItem"
            app:errorEnabled="true"
            app:errorTextAppearance="@color/colorExchangeItem"
            app:theme="@style/TextInputLayoutAppearance">

            <EditText
                android:id="@+id/fragment_edit_profile_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:imeOptions="flagNoExtractUi"
                android:inputType="textEmailAddress"
                android:maxLength="30"
                android:textColor="@color/colorExchangeItem"
                app:theme="@style/MyEditText" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btn_update_profile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/shadow"
            android:text="@string/update_profile"
            app:theme="@style/buttonStyle" />

    </LinearLayout>


</ScrollView>